--- a/index.html
+++ b/index.html
@@ -1,12 +1,102 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8">
-  <title>Pesek SPŠE</title>
-  <link rel="stylesheet" href="styles.css"> <!-- odkaz na CSS -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Designová stránka</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to right, #f8fafc, #e2e8f0);
+      color: #1a202c;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #ffffffcc;
+      padding: 1.5rem 2rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    header h1 {
+      font-size: 1.8rem;
+      font-weight: 800;
+      color: #2d3748;
+    }
+
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 6rem 2rem;
+      min-height: 80vh;
+    }
+
+    .hero h2 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+      font-weight: 700;
+      color: #2d3748;
+    }
+
+    .hero p {
+      max-width: 600px;
+      font-size: 1.2rem;
+      color: #4a5568;
+      margin-bottom: 2rem;
+    }
+
+    .hero button {
+      background: #4f46e5;
+      color: white;
+      border: none;
+      padding: 0.9rem 2rem;
+      font-size: 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      box-shadow: 0 4px 14px rgba(79, 70, 229, 0.4);
+    }
+
+    .hero button:hover {
+      background: #4338ca;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+      color: #718096;
+    }
+  </style>
 </head>
 <body>
-  <h1>Vítejte!</h1>
-  <p>Toto je ukázková stránka.</p>
+
+  <header>
+    <h1>Moje Designová Stránka</h1>
+  </header>
+
+  <section class="hero">
+    <h2>Vítej na mé webové stránce</h2>
+    <p>Toto je jednoduchý, moderní a responzivní design vytvořený pouze s HTML a interním CSS. Můžeš si jej upravit podle sebe.</p>
+    <button>Začít</button>
+  </section>
+
+  <footer>
+    © 2025 Moje Webová Stránka. Všechna práva vyhrazena.
+  </footer>
+
 </body>
 </html>
