--- a/index.html
+++ b/index.html
@@ -150,24 +150,39 @@
   </section>
 
   <!-- Sekce Postavy -->
-  <section id="characters" class="characters">
-    <h2>Postavy</h2>
-    <p>Ve světě Zaklínače najdeme mnoho fascinujících postav – od čarodějek až po elfí rebely.</p>
-    <div class="character-list">
-      <div class="character">
-        <h3>Yennefer z Vengerbergu</h3>
-        <p>Mocná čarodějka a osudová láska Geralta. Ambiciózní, nezávislá a nebezpečná.</p>
-      </div>
-      <div class="character">
-        <h3>Ciri</h3>
-        <p>Dědička trůnu Cintry, dítě překvapení. Osud ji svázal s Geraltem a nese moc, kterou nikdo nechápe.</p>
-      </div>
-      <div class="character">
-        <h3>Jaskier (Marigold)</h3>
-        <p>Bard, přítel a nechtěný společník Geralta. Proslul svými písněmi a láskami.</p>
-      </div>
+<section id="characters" class="characters">
+  <h2>Postavy</h2>
+  <p>Ve světě Zaklínače najdeme mnoho fascinujících postav – od čarodějek až po elfí rebely. Každá postava má svůj příběh, motivace a minulost, která formuje jejich osud.</p>
+  
+  <div class="character-list">
+
+    <div class="character">
+      <h3>Geralt z Rivie</h3>
+      <p>Zaklínač, známý jako Bílý vlk. Je cynický, ale drží se vlastního morálního kodexu, i když svět kolem něj žádný nemá. Putuje od města k městu a za úplatu loví nestvůry. Jeho vztah s Ciri a Yennefer ho staví do role otce, milence i ochránce zároveň.</p>
     </div>
-  </section>
+
+    <div class="character">
+      <h3>Yennefer z Vengerbergu</h3>
+      <p>Mocná čarodějka s komplikovanou minulostí. Navzdory své krutosti skrývá bolest a touhu po dítěti. Je inteligentní, nekompromisní a často manipuluje okolím pro dosažení vlastních cílů. Její láska k Geraltovi je vášnivá, ale zároveň tragická.</p>
+    </div>
+
+    <div class="character">
+      <h3>Ciri</h3>
+      <p>Dědička trůnu Cintry a dítě překvapení, osudem svázané s Geraltem. Má starobylou krev a je schopná cestovat mezi světy. Na útěku před těmi, kdo ji chtějí využít, nachází rodinu právě v Geraltovi a Yennefer. Její cesta je cestou růstu, boje a pochopení vlastní síly.</p>
+    </div>
+
+    <div class="character">
+      <h3>Triss Merigold</h3>
+      <p>Čarodějka z Mariboru, známá jako Triss Paví oko. Je loajální přítelkyně Yennefer a má hluboké city k Geraltovi. Pomáhá Ciri v těžkých chvílích a stává se jí ochránkyní. Na rozdíl od jiných mágů více důvěřuje empatii než moci.</p>
+    </div>
+
+    <div class="character">
+      <h3>Jaskier (Marigold)</h3>
+      <p>Bard, básník a věčný optimista. I když se často dostává do problémů, zůstává Geraltovým věrným společníkem. Zpopularizoval jeho činy písní „Hoď groš zaklínači“. Přes svou lehkomyslnost dokáže být loajální a odvážný přítel.</p>
+    </div>
+
+  </div>
+</section>
 
   <!-- Sekce Svět -->
   <section id="world" class="world">
