--- a/index.html
+++ b/index.html
@@ -1,199 +1,15 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zaklínač - Svět Sapkowského</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Roboto&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #111;
-      color: #f5f5f5;
-    }
-
-    header {
-      background-color: #1a1a1a;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
-    }
-
-    header h1 {
-      font-family: 'Cinzel', serif;
-      font-size: 1.5rem;
-      color: #d4af37;
-    }
-
-    nav a {
-      color: #ccc;
-      text-decoration: none;
-      margin-left: 1.5rem;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #d4af37;
-    }
-
-    section {
-      padding: 6rem 2rem;
-      text-align: center;
-      min-height: 100vh;
-    }
-
-    .hero, .characters, .world {
-      background: linear-gradient(to bottom, #1a1a1a, #000);
-    }
-
-    h2 {
-      font-family: 'Cinzel', serif;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      color: #d4af37;
-    }
-
-    p {
-      max-width: 800px;
-      margin: 0 auto 2rem;
-      font-size: 1.1rem;
-      color: #ccc;
-    }
-
-    .button {
-      background: none;
-      border: 2px solid #d4af37;
-      color: #d4af37;
-      padding: 0.75rem 2rem;
-      font-size: 1rem;
-      font-weight: bold;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-    }
-
-    .button:hover {
-      background: #d4af37;
-      color: #000;
-    }
-
-    .characters .character-list {
-      display: flex;
-      flex-direction: column;
-      gap: 2rem;
-      margin-top: 2rem;
-    }
-
-    .character {
-      background-color: #222;
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #000;
-    }
-
-    .character h3 {
-      font-family: 'Cinzel', serif;
-      font-size: 1.5rem;
-      color: #ffffff;
-      margin-bottom: 0.5rem;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      background-color: #1a1a1a;
-      font-size: 0.9rem;
-      color: #555;
-    }
-
-    @media (min-width: 768px) {
-      .character-list {
-        flex-direction: row;
-        justify-content: center;
-      }
-
-      .character {
-        width: 30%;
-      }
-    }
-  </style>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spotify 404</title>
+    <link rel="stylesheet" href="style.css"> </head>
 <body>
 
-  <header>
-    <h1>Zaklínač</h1>
-    <nav>
-      <a href="#home">Domů</a>
-      <a href="#characters">Postavy</a>
-      <a href="#world">Svět</a>
-    </nav>
-  </header>
-
-  <!-- Domovská sekce -->
-  <section id="home" class="hero">
-    <h2>Geralt z Rivie</h2>
-    <p>Lovec příšer, známý jako Bílý vlk. Putuje světem plným magie, intrik a nestvůr, aby chránil lidi před temnotou – za odměnu.</p>
-    <button class="button">Více o Zaklínačích</button>
-  </section>
-
-  <!-- Sekce Postavy -->
-<section id="characters" class="characters">
-  <h2>Postavy</h2>
-  <p>Ve světě Zaklínače najdeme mnoho fascinujících postav – od čarodějek až po elfí rebely. Každá postava má svůj příběh, motivace a minulost, která formuje jejich osud.</p>
-  
-  <div class="character-list">
-
-    <div class="character">
-      <h3>Geralt z Rivie</h3>
-      <p>Zaklínač, známý jako Bílý vlk. Je cynický, ale drží se vlastního morálního kodexu, i když svět kolem něj žádný nemá. Putuje od města k městu a za úplatu loví nestvůry. Jeho vztah s Ciri a Yennefer ho staví do role otce, milence i ochránce zároveň.</p>
+    <div class="background-container">
+        <a href="404Spotify.png" class="home-button">ZPĚT NA HLAVNÍ STRÁNKU</a>
     </div>
-
-    <div class="character">
-      <h3>Yennefer z Vengerbergu</h3>
-      <p>Mocná čarodějka s komplikovanou minulostí. Navzdory své krutosti skrývá bolest a touhu po dítěti. Je inteligentní, nekompromisní a často manipuluje okolím pro dosažení vlastních cílů. Její láska k Geraltovi je vášnivá, ale zároveň tragická.</p>
-    </div>
-
-    <div class="character">
-      <h3>Ciri</h3>
-      <p>Dědička trůnu Cintry a dítě překvapení, osudem svázané s Geraltem. Má starobylou krev a je schopná cestovat mezi světy. Na útěku před těmi, kdo ji chtějí využít, nachází rodinu právě v Geraltovi a Yennefer. Její cesta je cestou růstu, boje a pochopení vlastní síly.</p>
-    </div>
-
-    <div class="character">
-      <h3>Triss Merigold</h3>
-      <p>Čarodějka z Mariboru, známá jako Triss Paví oko. Je loajální přítelkyně Yennefer a má hluboké city k Geraltovi. Pomáhá Ciri v těžkých chvílích a stává se jí ochránkyní. Na rozdíl od jiných mágů více důvěřuje empatii než moci.</p>
-    </div>
-
-    <div class="character">
-      <h3>Jaskier (Marigold)</h3>
-      <p>Bard, básník a věčný optimista. I když se často dostává do problémů, zůstává Geraltovým věrným společníkem. Zpopularizoval jeho činy písní „Hoď groš zaklínači“. Přes svou lehkomyslnost dokáže být loajální a odvážný přítel.</p>
-    </div>
-
-  </div>
-</section>
-
-  <!-- Sekce Svět -->
-  <section id="world" class="world">
-    <h2>Svět Zaklínače</h2>
-    <p>Temný kontinent plný království, čarodějů, elfů, příšer a lidské krutosti. Magie zde splývá s politikou a starodávné kletby ožívají.</p>
-    <p><em>„Když lidé nenávidí, hledají viníky mezi těmi, kdo se odlišují.“</em></p>
-  </section>
-
-  <footer>
-    © 2025 Fanouškovský projekt. Všechna práva vyhrazena.
-  </footer>
 
 </body>
 </html>
