Enhance 404 page layout and styling

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify 404</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Spotify | 404 Error</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+</head>
 <body>
 
-    <div class="background-container">
-        <a href="404Spotify.png" class="home-button">ZPĚT NA HLAVNÍ STRÁNKU</a>
-    </div>
+    <main class="hero-section">
+        <div class="overlay"></div>
+        <div class="content">
+            <a href="404Spotify.png" class="btn-spotify">ZPĚT NA HLAVNÍ STRÁNKU</a>
+        </div>
+    </main>
 
 </body>
 </html>
