Update 404 page title and structure

--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Spotify | 404 Error</title>
+    <title>Spotify 404</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <main class="hero-section">
-        <div class="overlay"></div>
-        <div class="content">
-            <a href="404Spotify.png" class="btn-spotify">ZPĚT NA HLAVNÍ STRÁNKU</a>
-        </div>
-    </main>
+    <div class="fullscreen-container">
+        <img src="404Spotify.png" alt="Spotify 404" class="hero-image">
+    </div>
 
 </body>
 </html>
