Update title and structure for 404 page

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify 404</title>
+    <title>404 – Pauza</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="fullscreen-container">
-        <img src="404Spotify.png" alt="Spotify 404" class="hero-image">
-    </div>
-
+    <main class="hero">
+        <img src="404Spotify.png" alt="404 – Pauza, hudba a příroda">
+    </main>
 </body>
 </html>
