Change title and update image alt text

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 – Pauza</title>
+    <title>Fullscreen image</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="hero">
-        <img src="404Spotify.png" alt="404 – Pauza, hudba a příroda">
-    </main>
+    <img src="404Spotify.png" alt="Fullscreen image" class="fullscreen">
 </body>
 </html>
