--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen image</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+  <title>404Spotify</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="404Spotify.png" alt="Fullscreen image" class="fullscreen">
+  <img src="404Spotify.png" alt="Fullscreen" id="bg">
 </body>
 </html>
